# kalamarnica

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
.github/workflows/: release.yml  unused-dependencies.yml
src/: apply_context.rs  context.rs  ensure_host_entry.rs  ensure_users_map.rs  gh_client.rs  gl_client.rs  lib.rs  main.rs  repo_root.rs  storage.rs  test_utils.rs  utils.rs  vcs.rs  vcs_client.rs
src/cmd/: apply.rs  auth_status.rs  bind.rs  create.rs  current.rs  delete.rs  list.rs  set_token.rs  switch.rs  unbind.rs
