[package]
name = "kalamarnica"
version = "0.2.0"
edition = "2024"
homepage = "https://github.com/zaryo/kalamarnica"
repository = "https://github.com/zaryo/kalamarnica"
readme = "README.md"
license = "Apache-2.0"
description = "GitHub CLI context switcher — manage multiple GitHub accounts"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
octocrab = "0.49"
gitlab = "0.1811"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11"
indoc = "2"
log = "0.4"
toml = "0.8"
rustls = { version = "0.23.40", features = ["ring"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
dbg_macro = "deny"
error_impl_error = "deny"
expect_used = "deny"
infinite_loop = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
tests_outside_test_module = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
literal_string_with_formatting_args = "allow"
match_bool = "allow"
single_match_else = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

[dev-dependencies]
tempfile = "3"
